invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_5.src
.IPPcode24
ADD int@49 int@49 int@49